--- a/engines/attendance/app/views/attendance/custom/custom_contacts/edit.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_contacts/edit.html.haml
@@ -1,9 +1,9 @@
 .two.wide.mobile.column
-  %a{href: "#{attendance.custom_custom_ticket_custom_dependents_path(@ticket)}"}
+  %a{href: "#{attendance.custom_custom_tickets_path}"}
     %i.big.arrow.left.icon
 .thirteen.wide.mobile.column.text-center
   .title-header Atendimento
-  .sub-title Edição de dependente
+  .sub-title Atualização de dados básicos
   .divider
 .ui.grid.container
   .column
