--- a/engines/attendance/app/views/attendance/custom/custom_dependent_incomes/edit.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_dependent_incomes/edit.html.haml
@@ -3,6 +3,8 @@
     %i.big.arrow.left.icon
 .thirteen.wide.mobile.column.text-center
   .title-header Atendimento
-  .sub-title Envio de documentação
+  .sub-title Atualização de renda
   .divider
 .ui.grid.container
+  .column
+    = render 'form'
