--- a/engines/attendance/app/views/attendance/custom/custom_documents/_cadastre.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_documents/_cadastre.html.haml
@@ -76,15 +76,33 @@
   = f.input :attachment, label: false, as: :file, input_html: { class: 'upload' }
 
 
-%br
-%br
-= link_to "Finalizar etapa", custom_custom_ticket_cadastre_path(@ticket), class: 'ui button fluid green', style: 'font-size: 25px', data: { disable_with: 'Finalizando. Aguarde...'}
+- if @ticket.cadastre_mirror.special_condition_id == 1
+  %p
+    %h4#def Comprovantes da deficiência declarada;
+  = simple_form_for @document,url: custom_custom_ticket_custom_documents_path(type: 'cadastre', document_type_id: 8, anchor: 'def') do |f|
+    - @ticket.documents.where(document_type_id: 8).each_with_index do |document, index|
+      .ui.segment{style: 'padding-top: 2px !important;padding-bottom: 1px !important'}
+        - if %w(jpg jpeg gif png).include?(document.attachment.to_s.split('.')[-1])
+          Arquivo #{index + 1}
+          %div{style: 'width: 100%; height: 40px; overflow: hidden; position: relative;'}
+            = link_to custom_custom_image_path(document), remote: true do
+              = image_tag document.attachment, style: 'width: auto; position: absolute; top: 10%; left: 0; transform: translateX(-25%) translateY(-50%);'
+        - else
+          Arquivo #{index + 1}
+          %br
+          %br
+          %b.text-center= link_to "Baixar arquivo", document.attachment_url, target: '_blank'
+          %br
+        %br
+    = f.input :attachment, label: false, as: :file, input_html: { class: 'upload' }
 
-:javascript
-  $(document).ready(function() {
-    $(".upload").change(function() {
-      $('.ui.grid.container').hide();
-      $('#message').show();
-      this.form.submit();
-    });
-  });
+
+- if @ticket.allow_cadastre
+  %br
+  %br
+  = link_to "Finalizar etapa", custom_custom_ticket_cadastre_path(@ticket), class: 'ui button fluid green', style: 'font-size: 25px', data: { disable_with: 'Finalizando. Aguarde...'}
+- else
+  %br
+  %br
+  .ui.label.red{style: 'text-align: justify'}
+    %p Para realizar a finalização desta etapa, favor enviar ao menos um arquivo de cada categoria de documentaçãoe exigida.
