--- a/engines/attendance/app/views/attendance/custom/custom_cadastres/edit.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_cadastres/edit.html.haml
@@ -7,4 +7,10 @@
   .divider
 .ui.grid.container
   .column
+    %p{style: 'text-align: justify'}
+      Nesta etapa será necessário a verificação, atualização das informações e envio das fotos dos documentos solicitados.
+      %br
+      %br
+      Caso o nome ou o CPF estejam divergentes, solicitamos que entrem em contato por meio de requerimento pelo próprio aplicativo
+      %br
     = render 'form'
