--- a/engines/attendance/app/views/attendance/custom/custom_incomes/index.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_incomes/index.html.haml
@@ -6,6 +6,13 @@
   .sub-title Atualização de rendas
   .divider
 .ui.grid.container
+  %p{style: 'text-align: justify'}
+    Vamos atualizar sua renda e de seus dependentes caso tenha. Ao ser solicitado sobre o envio da documentação fique atento ao documento que deve enviar.
+    %br
+    %br
+    Saiba quais documentos deve enviar
+    %a{href: 'http://www.codhab.df.gov.br/pagina/2', target: '_blank'}
+      clique aqui.
   %table.ui.table
     %tbody
       %tr
