--- a/engines/attendance/app/views/attendance/custom/custom_tickets/_ticket.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_tickets/_ticket.html.haml
@@ -7,7 +7,7 @@
   .divider
 .ui.grid.container
   %p{style: 'text-align: justify'}
-    Realize a verificação, atualização e envio da documentação dos 5 passos abaixo.
+    O processo convocatório somente será considerado finalizado após a conclusão das 5 etapas abaixo no prazo estabelecido no edital de convocação.
 
   %table.ui.table.celled
     %tbody{style: "#{@ticket.action_one ? 'background-color: #51a551' : ''}"}
