--- a/engines/attendance/app/views/attendance/custom/custom_tickets/_welcome.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_tickets/_welcome.html.haml
@@ -7,7 +7,10 @@
   .divider
 .ui.grid.container
 %h2.text-center Bem-vindo ao Atendimento CODHAB
-
+%p{style: 'text-align: justify'}
+  Você foi convocado a enviar suas documentações com vistas à habilitação no Programa Habitacional do Distrito Federal.
+  %br
+  %b Importante: As fotos dos documentos devem estar legíveis e devem representar o documento solicitado.
 
 %br
 %br
