--- a/engines/attendance/app/views/attendance/custom/custom_documents/_dependent.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_documents/_dependent.html.haml
@@ -42,5 +42,28 @@
 
 %br
 %br
+
+- if @ticket.cadastre_mirror.dependent_mirrors.find(params[:dependent_mirror_id]).age >= 60
+  %p
+    %h4#def Comprovantes de curatela;
+  = simple_form_for @document,url: custom_custom_ticket_custom_documents_path(type: 'dependent', document_type_id: 10, anchor: 'def', dependent_mirror_id: params[:dependent_mirror_id]) do |f|
+    - @ticket.documents.where(document_type_id: 10, dependent_mirror_id: params[:dependent_mirror_id]).each_with_index do |document, index|
+      .ui.segment{style: 'padding-top: 2px !important;padding-bottom: 1px !important'}
+        - if %w(jpg jpeg gif png).include?(document.attachment.to_s.split('.')[-1])
+          Arquivo #{index + 1}
+          %div{style: 'width: 100%; height: 40px; overflow: hidden; position: relative;'}
+            = link_to custom_custom_image_path(document), remote: true do
+              = image_tag document.attachment, style: 'width: auto; position: absolute; top: 10%; left: 0; transform: translateX(-25%) translateY(-50%);'
+        - else
+          Arquivo #{index + 1}
+          %br
+          %br
+          %b.text-center= link_to "Baixar arquivo", document.attachment_url, target: '_blank'
+          %br
+        %br
+    = f.input :attachment, label: false, as: :file, input_html: { class: 'upload' }
+
+%br
+%br
 - if @ticket.allow_dependent(params[:dependent_mirror_id])
   = link_to "Continuar atualização", custom_custom_ticket_custom_dependents_path(@ticket), class: 'ui button fluid green', style: 'font-size: 25px', data: { disable_with: 'Finalizando. Aguarde...'}
