--- a/engines/attendance/app/views/attendance/custom/custom_cadastres/_form.html.haml
+++ b/engines/attendance/app/views/attendance/custom/custom_cadastres/_form.html.haml
@@ -29,10 +29,13 @@
 
     = link_to "Próxima etapa", "javascript:void(0)", onclick: "show_step('step_three')", class: 'ui button yellow', style: 'float: right'
   #step_three{style: 'display: none'}
-    = f.input :special_condition_id, collection: {"Sim": 1, "Não": 2}, label: 'Possui condição especial?', as: :select, include_blank: false
-    = f.input :special_condition_type_id, label: "Tipo de condição especial", as: :select, collection: Core::Candidate::SpecialConditionType.all, include_blank: false
+    = f.input :special_condition_id, collection: {"Sim": 1, "Não": 2}, label: 'Possui condição especial?', as: :select, include_blank: false, input_html: { id: 'special_condition_id'}
+    #special_condition_type_id{ style: "#{f.object.special_condition_id == 1 ? 'display: block;' : 'display: none;'}"}
+      = f.input :special_condition_type_id, label: "Tipo de condição especial", as: :select, collection: Core::Candidate::SpecialConditionType.all, include_blank: false
     = f.input :nis
-    = f.input :cid
+    #cid{ style: "#{f.object.special_condition_id == 1 ? 'display: block;' : 'display: none;'}"}
+      = f.input :cid
+
     = f.input :adapted_property, collection: {"Sim": 1, "Não": 2}, selected: 2, label: "Propriedade adaptada?", as: :select, include_blank: false
     = f.input :mother_name, label: "Nome (Mãe)"
     = link_to "Etapa anterior", "javascript:void(0)", onclick: "show_step('step_two')", class: 'ui button'
@@ -42,8 +45,26 @@
 :javascript
   $(document).ready(function() {
     $(".step_one_next").show();
+
+    $("#special_condition_id").on('change', function(){
+      if($(this).val() == '1') {
+        $('#cid').show();
+        $("#special_condition_type_id").show();
+      } else {
+        $('#cid').hide();
+        $("#special_condition_type_id").hide();
+      }
+    })
   })
+
   function show_step(step) {
+    if(step == 'step_one') {
+      $("#label").show();
+    } else {
+      $("#label").hide();
+    }
+
+
     $("#step_one").hide()
     $("#step_two").hide()
     $("#step_three").hide()
